--- a/index.html
+++ b/index.html
@@ -504,18 +504,18 @@
     <h2 class="heading">Contact <span>Me</span> <span class="animate scroll" style ="--i:1;"></span></h2>
     
     <!-- Contact form -->
-     <form action="#">
+     <form action="https://formsubmit.co/andreragbir121@gmail.com" method="POST">
         <div class="input-box">
 
             <!-- Input field for Full Name -->
             <div class="input-field">
-                <input type="text" placeholder="Full name" required>
+                <input type="text" placeholder="Full name" id="Full-name" required>
                 <span class="focus"></span>
             </div>
 
             <!-- Input field for Full Name -->
             <div class="input-field">
-                <input type="text" placeholder="Email Address" required>
+                <input type="text" placeholder="Email Address" id="email" required>
                 <span class="focus"></span>
             </div>
             <span class="animate scroll" style ="--i:3;"></span>
@@ -524,13 +524,13 @@
        <!-- Input field for Mobile Number -->
         <div class="input-box">
             <div class="input-field">
-                <input type="number" placeholder="Mobile Number" required>
+                <input type="number" placeholder="Mobile Number" id="number" required>
                 <span class="focus"></span>
             </div>
 
             <!-- Input field for Email Subject -->
             <div class="input-field">
-                <input type="text" placeholder="Email subject" required>
+                <input type="text" placeholder="Email subject" id="subject" required>
                 <span class="focus"></span>
             </div>
             <span class="animate scroll" style ="--i:5;"></span>
@@ -538,7 +538,7 @@
 
         <!-- Textarea field for the message -->
         <div class="textarea-field">
-            <textarea name="" id="" cols="30" rows="10" placeholder="your message" required></textarea>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="your message" required></textarea>
             <span class="focus"></span>
             <span class="animate scroll" style ="--i:7;"></span>
         </div>
@@ -552,6 +552,7 @@
 </section>
 <footer></footer>
 <!-- JavaScript file -->
-<script src="JS/portfolio.js"></script>
+<script src="Scripts/portfolio.js"></script>
+
 </body>
 </html>
