--- a/HTML - College Work/College Journey.html
+++ b/HTML - College Work/College Journey.html
@@ -6,7 +6,7 @@
     <title>College Work Gallery</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../CSS/Work.css">
-    <script src="../JS/Work.js"></script>
+    <script src="../Scripts/Work.js"></script>
 
 </head>
 <body>
