--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <!--Display Capthca-->
         <input type="hidden" name="_captcha" value="false">
 
-        <input type="hidden" name="_text" value="HTML - others/Success Page.html">
+        <input type="hidden" name="_next" value="HTML - others/Success Page.html">
         
         <div class="input-box">
 
