--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <!--Display Capthca-->
         <input type="hidden" name="_captcha" value="false">
 
-        <input type="hidden" name="_next" value="https://andreragbir121.github.io/Portfolio/success.html">
+        <input type="hidden" name="_next" value="https://andreragbir121.github.io/Portfolio/#contact/success.html">
         
         <div class="input-box">
 
