--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="content">
                         <div class="year"><i class='bx bxs-calendar'></i>2017-2022</div>
                         <h3>Tech Intern - Caribbean Tech Trendz Limited</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tenetur ea accusantium harum, provident reprehenderit velit minus soluta earum eos eum exercitationem laboriosam fugiat quaerat reiciendis! Fugit pariatur voluptas et!</p>
+                        <p></p>
                     </div>
                 </div>
 
@@ -266,7 +266,7 @@
 
               <div class="slide">
                 <div class="slide-content">
-                    <img src="pictures/Certificates/Programming for Unity Game Development.png" alt="Programming in C++ - A Hands on Introduction to C++">
+                    <img src="pictures/Certificates/Programming for Unity Game Development.png" alt="Unity Programming">
                   <div class="view-button">
                     <a href="https://drive.google.com/file/d/1BQwFafcR24VKwDJE0Lg-yfxIAe8o3bfY/view?usp=sharing" target="_blank">View Certifcate</a>
                   </div>
@@ -276,12 +276,25 @@
               
               <div class="slide">
                 <div class="slide-content">
-                    <img src="pictures/Certificates/Meta Front-End Developer.png" alt="Programming in C++ - A Hands on Introduction to C++">
+                    <img src="pictures/Certificates/Meta Front-End Developer.png" alt="Meta front end">
                   <div class="view-button">
                     <a href="https://drive.google.com/file/d/1aqJ3w3r1T_ukyhOKRggwlkKZx_iAjFbl/view?usp=drive_link" target="_blank">View Certifcate</a>
                   </div>
                 </div>
               </div>
+
+
+
+              <div class="slide">
+                <div class="slide-content">
+                    <img src="pictures/Certificates/Meta Back-End Developer.jpeg" alt="Meta backend dev">
+                  <div class="view-button">
+                    <a href="https://drive.google.com/file/d/1Rhzia-4lEOuuLqH63AeVrTfcZ4R8in-E/preview" target="_blank">View Certifcate</a>
+                  </div>
+                </div>
+              </div>
+
+
 
               </div>
             </div>
