minor update to the footer

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
     <div class="footer-text">
   <h2 class="subtext-header">Get in Touch</h2>
   <h3 class="subtext-main">
-    Ecosystem bootstrapping learning curve lean startup disruptive. Marketing long tail disruptive agile development partner.
+Please don’t hesitate to reach out - I’m always open to opportunities, collaborations, or just a simple conversation
   </h3>
 
   <div class="footer-socials">
