updated education content

--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
                     <div class="content">
                         <div class="year"><i class='bx bxs-calendar'></i>September 2025 - Current</div>
                         <h3>Bachelors of Applied Science in Information Technology(General) - COSTAATT</h3>
-                        <p>NULL</p>
-                    </div>
+                        <p><b>Relevant Coursework:</b> <br>
+                          <b>•</b>	Scripting language, Developer, Project Skills for Developers. <br>
+                          <b>•</b>	Discrete Mathematics, 
+                        </p>
+                      </div>
                 </div>
 
                 <div class="education-content">
@@ -164,17 +167,50 @@
                         <div class="year"><i class='bx bxs-calendar'></i>   May 2024 – December 2024 </div>
                         <h3>Tech Intern - Caribbean Tech Trendz Limited</h3>
                         <p>
-                            <b>•</b>	Delivered managed IT services to 10+ companies, improving system performance and client satisfaction. <br>
-                            <b>•</b>	Troubleshot hardware, software, and network issues, increasing uptime and reducing support tickets.  <br>
-                            <b>•</b>	Configured and maintained servers, workstations, and network infrastructure, ensuring compliance with security and performance standards. <br>
-                            <b>•</b>	Managed users, permissions, and access through Active Directory, improving user security and efficiency. <br>
-                            <b>•</b>	Conducted Azure operations including VM deployment, storage configuration, and VNet setup. <br>
-                            <b>•</b>	Monitored system performance, applied patches, and implemented security measures to ensure system stability and compliance with industry standards. <br>
-                            <b>•</b>	Supported students in Azure/Power BI training labs, solving technical issues during live classes hosted by ICT technicians. <br>
-                            <b>•</b>	Maintained technical documentation to improve internal knowledge sharing and team effectiveness. <br>
-</p>
+                            <b>•</b>Delivered managed IT services to 10+ companies, improving system performance and client satisfaction.<br>
+                            <b>•</b>Troubleshot hardware, software, and network issues, increasing uptime and reducing support tickets.<br>
+                            <b>•</b>Managed users and access via Active Directory, enhancing security and operational efficiency.<br>
+                            <b>•</b>Conducted Azure operations including virtual machine deployment, storage configuration, and virtual network (VNet) setup.<br>
+                            <b>•</b>Supported Power BI training labs, assisting users with data visualization and reporting tools<br>
+                            <b>•</b>Monitored systems, applied patches, and maintained structured technical documentation to ensure stability and effective knowledge sharing.<br>
+     
+                          </p>
+
                     </div>
                 </div>
+                <div class="education-content">
+
+                    <!-- Year and details of experience -->
+                        <div class="content">
+                        <div class="year"><i class='bx bxs-calendar'></i>   July 2025 – August 2025 </div>
+                        <h3>IT Technician - Wave One Network Solutions Limited</h3>
+                        <p>
+                            <b>•</b>Managed inventory using ODOO and built a comprehensive item database. <br>
+                            <b>•</b>Resolved hardware, software, and network issues, reducing downtime and support tickets.<br>
+                            <b>•</b>Maintained technical documentation to enhance internal knowledge sharing and team efficiency.<br>
+                            <b>•</b>Installed scanners and configured PCs for new users, ensuring smooth onboarding and system readiness.<br>
+                          </p>
+                    </div>
+                </div>
+
+                <div class="education-content">
+
+                    <!-- Year and details of experience -->
+                        <div class="content">
+                        <div class="year"><i class='bx bxs-calendar'></i>   August 2025 – Present </div>
+                        <h3>IT Consultant - Diagon Consulting Ltd</h3>
+                        <p>
+                            <b>•</b>Delivered managed IT services to 10+ companies, improving system performance and client satisfaction. <br>
+                            <b>•</b>Designed and implemented Robotic Process Automation (RPA) solutions using UiPath to automate repetitive client tasks, improving operational efficiency.<br>
+                            <b>•</b>Collected and inputted data from telecommunication sites into mobile and PBX usage accounting software, then methodically compared usage data against invoices to ensure billing accuracy.<br>
+                            <b>•</b>Maintained and structured technical documentation to support internal processes and client deliverables.<br>
+
+
+                          </p>
+                    </div>
+                </div>
+
+
             </div>
         </div> 
     </div>
