Minor adjustment to the styling of how the college projects are displayed - increased the size of both description and embeded/image on the right of the presentation display

--- a/HTML - College Work/College Journey.html
+++ b/HTML - College Work/College Journey.html
@@ -13,6 +13,19 @@
     <h2 class="heading">My <span> Work</span></h2>
     <div class="content">
         
+
+        <!-- 17 -->
+         <div class="row fade-in">
+            <img data src="../pictures/College Work/ITEC 235 final project.png">
+            <div class="layer">
+                <h5>Java Bank Application</h5>
+                <p>Final Project for the class 'ENTP-210: Fundamentals of Entrepreneurship,' featuring team collaboration to brainstorm and create a business plan.</p>
+                <a href="project-view.html?id=17" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+            </div>
+        </div>
+
+
+
           <!--16-->
           <div class="row fade-in">
             <img data src="../pictures/College Work/ITEC 235 final project.png">
