Added more project completed through semester 202501

--- a/HTML - College Work/College Journey.html
+++ b/HTML - College Work/College Journey.html
@@ -12,18 +12,39 @@
 <main>
     <h2 class="heading">My <span> Work</span></h2>
     <div class="content">
-        
+    
+
+
+          <!-- 19 -->
+        <div class="row fade-in">
+            <img data src="../pictures/College Work/ITEC 270 Project display pic.png">
+            <div class="layer">
+                <h5>Database Design for a Gym</h5>
+                <p>Final project for ITEC 270: Design and implement a database, including defining relationships and applying database rules.</p>
+                <a href="project-view.html?id=19" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+            </div>
+        </div>
+
+
+        <!-- 18 -->
+        <div class="row fade-in">
+            <img data src="../pictures/College Work/ITEC 225 Final Project display pic.png">
+            <div class="layer">
+                <h5>System Analysis on Supermarket</h5>
+                <p>Final project for the class 'ITEC 225: System Analysis,' performing a system analysis for a supermarket and recommending upgrades.</p>
+                <a href="project-view.html?id=18" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+            </div>
+        </div>
 
         <!-- 17 -->
          <div class="row fade-in">
-            <img data src="../pictures/College Work/ITEC 235 final project.png">
+            <img data src="../pictures/College Work/ENTP 210 final project display pic.png">
             <div class="layer">
-                <h5>Java Bank Application</h5>
+                <h5>24 HR Superamarket Business Plan</h5>
                 <p>Final Project for the class 'ENTP-210: Fundamentals of Entrepreneurship,' featuring team collaboration to brainstorm and create a business plan.</p>
                 <a href="project-view.html?id=17" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
             </div>
         </div>
-
 
 
           <!--16-->
