--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                           <b>•</b> Developed a Robotic Process Automation (RPA) solution to streamline repetitive tasks for the client.<br>
                           <b>•</b> Collaborated with a partner company to maintain the client's software systems.<br>
                           <b>•</b> Collected and stored mobile usage data in an accounting software used in the telecommunications sector, generating reports across various operational areas.<br>
-                          <b>•</b> ntained clear and consistent communication with both the client and internal team, providing updates on issues, resolutions, daily tasks, and project goals.<br>
+                          <b>•</b> maintained clear and consistent communication with both the client and internal team, providing updates on issues, resolutions, daily tasks, and project goals.<br>
                         </p>
 
                           </p>
