--- a/HTML - College Work/project-view.html
+++ b/HTML - College Work/project-view.html
@@ -15,7 +15,7 @@
     const params = new URLSearchParams(window.location.search);
     const id = parseInt(params.get('id'));
 
-    fetch('test.json')
+    fetch('projects.json')
         .then(response => response.json())
         .then(data => {
             const course = data.find(item => item.id === id);
