added new project listing to index with links to the projects as well

--- a/index.html
+++ b/index.html
@@ -545,10 +545,69 @@
                     <div class="layer">
                         <h5>Calculator</h5>
                         <p>Basic calculator created using HTML/CSS and JavaScript, with the ability to calculator modula, subtraction, addition, division and multiplications.</p>
-                        <a href=""><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                        <a href="https://andreragbir121.github.io/Calculator/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                     </div>
                 </div>
+
+
+                  <div class="row">
+                    <img src="pictures/My Projects/photo-viewer.png">
+                    <div class="layer">
+                        <h5>photo viewer</h5>
+                        <p>Collaborated in the development of a simple Photo viewer to display images in a user-friendly interface, along with scrolling and zooming capabilities. Built by utilizing HTML, CSS and JavaScript.</p>
+                        <a href="https://kerry-mannette.github.io/Photo-Viewer/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+                  <div class="row">
+                    <img src="pictures/My Projects/Horticulture.png">
+                    <div class="layer">
+                        <h5>Horticulture Club Website</h5>
+                        <p>Collaborated in the development of a simple website for a Horticulture club, by utilizing HTML, CSS, and JavaScript to create an engaging and informative online presence.</p>
+                        <a href="https://kerry-mannette.github.io/Horticultural-Society-Website/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+                  <div class="row">
+                    <img src="pictures/My Projects/Web-Racer.png">
+                    <div class="layer">
+                        <h5>Web-Racer</h5>
+                        <p>Simple Web Racer game, utilizing HTML, CSS, and JavaScript for an interactive gaming experience. Players have the option to select from 4 different vehicles and line them up to start the race.</p>
+                        <a href="https://andreragbir121.github.io/web-racer/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+
+                  <div class="row">
+                    <img src="pictures/My Projects/Trini-Ting.png">
+                    <div class="layer">
+                        <h5>Trini-Ting</h5>
+                        <p>Interactive survey game, allowing users to participate in surveys about the country of Trinidad and Tobago and view results in an engaging way. Currenlty limited to 4 types of questions and each questions relay each time. Built with HTML, CSS and JavaScript</p>
+                        <a href="https://andreragbir121.github.io/TriniTing/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+
+                  <div class="row">
+                    <img src="pictures/My Projects/campus-club.png">
+                    <div class="layer">
+                        <h5>Campus Club Management</h5>
+                        <p>Collaborate in the development of a website for campus club management, providing information and tools to streamline club activities and communication. It lists dates of meeting activities, total capacity and options to register. Built with HTML, CSS and JavaScript</p>
+                        <a href="https://kerry-mannette.github.io/Campus-Club-Management-Website/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+                  <div class="row">
+                    <img src="pictures/My Projects/student-service-help-protal.png">
+                    <div class="layer">
+                        <h5>Student Service Help Portal</h5>
+                        <p>Collaborate in the development of a website for student service help portal, providing resources and assistance to students. Students can send a request as well as view pending requests. Built with HTML, CSS and JavaScript.</p>
+                        <a href="https://deployment.10001mb.com/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
             </div>
+            
 
 
 
