Add hotel reservation image to project assets

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 </div>
 
                   <div class="row">
-                    <img src="pictures/My Projects/Web-Racer.png">
+                    <img src="pictures/My Projects/web-racer.png">
                     <div class="layer">
                         <h5>Web-Racer</h5>
                         <p>Simple Web Racer game, utilizing HTML, CSS, and JavaScript for an interactive gaming experience. Players have the option to select from 4 different vehicles and line them up to start the race.</p>
@@ -603,6 +603,25 @@
                         <h5>Student Service Help Portal</h5>
                         <p>Collaborate in the development of a website for student service help portal, providing resources and assistance to students. Students can send a request as well as view pending requests. Built with HTML, CSS and JavaScript.</p>
                         <a href="https://deployment.10001mb.com/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+                  <div class="row">
+                    <img src="pictures/My Projects/BookIt-Hote-Reservation.png">
+                    <div class="layer">
+                        <h5>BookIt Hotel Reservation System</h5>
+                        <p>Interactive booking system for hotel reservations, allowing users to select dates, room types, and manage their bookings efficiently. Built with HTML, CSS, and JavaScript.</p>
+                        <a href="https://andreragbir121.github.io/Hotel-Reservation/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
+
+
+                  <div class="row">
+                    <img src="pictures/My Projects/brightminds.png">
+                    <div class="layer">
+                        <h5>Bright Minds</h5>
+                        <p>An interactive website developed for the ministry of education, dedicated for students to upload their essays and receive feedback from their instructors to improve their writing skills. Built with HTML, CSS, PHP and JavaScript.</p>
+                        <a href="https://brightminds.is-great.net/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                     </div>
                 </div>
 
