Update relevant coursework in education section of index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                         <div class="year"><i class='bx bxs-calendar'></i>September 2025 - Current</div>
                         <h3>Bachelors of Applied Science in Information Technology(General) - COSTAATT</h3>
                         <p><b>Relevant Coursework:</b> <br>
-                          <b>•</b>	Scripting language, Developer, Project Skills for Developers. <br>
+                          <b>•</b>	Scripting language, Project Skills for Developers, Web Client-Side Programming and Libraries, Managing Data for Web Applications. <br>
+                          <b>•</b>	Network Management I, Security Management  
                           <b>•</b>	Discrete Mathematics, 
                         </p>
                       </div>
