Fix formatting in relevant coursework section of index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>Bachelors of Applied Science in Information Technology(General) - COSTAATT</h3>
                         <p><b>Relevant Coursework:</b> <br>
                           <b>•</b>	Scripting language, Project Skills for Developers, Web Client-Side Programming and Libraries, Managing Data for Web Applications. <br>
-                          <b>•</b>	Network Management I, Security Management  
+                          <b>•</b>	Network Management I, Security Management. <br>
                           <b>•</b>	Discrete Mathematics, 
                         </p>
                       </div>
