Refactor code structure for improved readability and maintainability

--- a/HTML - College Work/College Journey.html
+++ b/HTML - College Work/College Journey.html
@@ -13,7 +13,15 @@
     <h2 class="heading">My <span> Work</span></h2>
     <div class="content">
     
-
+          <!-- 20 -->
+        <div class="row fade-in">
+            <img data src="../pictures/College Work/MGMT 125 Chipotle Franchise Management.png">
+            <div class="layer">
+                <h5>Management Planning for Chipotle Franchise in T&T</h5>
+                <p>Final project for MGMT 125: Principles Of Management, with the focus of opening a Chipotle franchise in T&T, and maintaining the management of the franchise.</p>
+                <a href="project-view.html?id=20" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+            </div>
+        </div>
 
           <!-- 19 -->
         <div class="row fade-in">
