Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -626,6 +626,15 @@
                     </div>
                 </div>
 
+
+                  <div class="row">
+                    <img src="pictures/My Projects/AR-shopping.png">
+                    <div class="layer">
+                        <h5>AR-Shopping</h5>
+                        <p>A simple e-commerce website with augmented reality features to enhance the shopping experience. Created for demonstration purposes in a job interview. Built with HTML, CSS, Javascript and PHP.</p>
+                        <a href="https://ar-shopping.is-great.net/" target="_blank"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                    </div>
+                </div>
             </div>
             
 
